syntax="proto3";

package server;

option go_package = "/gen";

service Authentication{

    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest)returns(LogoutResponse);
    rpc Refresh(RefreshRequest)returns(RefreshResponse);
    rpc Me(MeRequest)returns(MeResponse);
    rpc ConfirmEmail(ConfirmEmailRequest)returns(ConfirmEmailResponse);
}

service FeedService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse);
}

message RegisterRequest{
    string email=1;
    string password=2;
    string repeat_password=3;
}

message RegisterResponse{
    bool success=1;
}

message LoginRequest{
    string email=1;
    string password=2;

}

message LoginResponse{
    User user=1;
    AccessToken access_token=2;
    RefreshToken refresh_token=3;
}

message LogoutRequest{
    string id = 1;
}

message LogoutResponse{
    bool success=1;
}

message RefreshRequest{
    string refresh_token=1;
}

message RefreshResponse{
    AccessToken access_token=1;
    RefreshToken refresh_token = 2;    
}

message MeRequest{
    string access_token=1;
}

message MeResponse{
    User user=1;
}

message ConfirmEmailRequest {
    string email = 1; 
    string confirmation_code=2;
}

message ConfirmEmailResponse {
    bool success = 1;
}

message User {
    string id = 1;
    string email = 2;
}

message AccessToken {
    string token = 1;
    int64 expiresAt = 2; 
}

message RefreshToken {
    string token = 1;
    int64 expiresAt = 2; 
}

message CreatePostRequest {
    string content = 2;
    string image_url = 3;
}

message CreatePostResponse {
    Post post = 1;
}

message GetAllPostsRequest {
    int32 page = 1;         
    int32 page_size = 2;     
}

message GetAllPostsResponse {
    repeated Post posts = 1;
    int32 total_posts = 2;   
}

message Post {
    string content = 3;
    string image_url = 4;
    string created_at = 5;
}